update: conclusion and correct typose. Add: acknowledgements and abstract

--- a/tex/references.bib
+++ b/tex/references.bib
@@ -5,6 +5,13 @@
   url          = {https://github.com/GAtemROU/Thesis-Project},
 }
 
+@article{Duff_2025,
+  title={An ACT-R model of resource-rational performance in a pragmatic signaling game},
+  author={Duff, John and Mayn, Alexandra and Demberg, Vera},
+  year={2025},
+  publisher={OSF}
+}
+
 @inproceedings{lingoturk,
   title={LingoTurk: managing crowdsourced tasks for psycholinguistics},
   author={Pusse, Florian and Sayeed, Asad and Demberg, Vera},
