--- a/tex/sections/c0/abstract.tex
+++ b/tex/sections/c0/abstract.tex
@@ -1,1 +1,2 @@
 ﻿\section*{Abstract}
+Reference games are a well-established paradigm for studying pragmatic reasoning, but little is known about how such reasoning is reflected in visual attention. This thesis introduces eye-tracking as a novel method for investigating reference games, using gaze data to gain insight into participants' decision-making processes. By analyzing participants' gaze behavior and self-reported strategies, we examine whether differences in reasoning are tied to how participants attend to and interpret key information. We show that patterns of visual attention reflect meaningful differences in how participants approach the task, even when their overall viewing behavior appears similar. These attentional patterns are predictive of task success and suggest that deeper reasoning may be associated with greater engagement with available messages. The results demonstrate that even low-resolution, webcam-based eye-tracking can reveal valuable information about pragmatic inference, offering a new methodological direction for the study of language and reasoning.
