--- a/tex/sections/c0/acks.tex
+++ b/tex/sections/c0/acks.tex
@@ -1,1 +1,2 @@
 ﻿\section*{Acknowledgements}
+I am extremely grateful to my supervisor, \textbf{Dr. John Jack Duff}, for his guidance, patience, responsiveness, and support throughout this project. His thoughtful advice, openness to acknowledging mistakes, and deep expertise in the research topic were invaluable. Without his oversight, I would not have been able to get this far.
