--- a/tex/sections/conclusion.tex
+++ b/tex/sections/conclusion.tex
@@ -4,12 +4,17 @@
 \section{Conclusion}
 \label{sec:conclusion}
 
-In this thesis, we examined the research question from a few different sides. The raw pairwise correlations, the model to predict whether a given trial would be solved correctly, then the models that describe the likelihoods of gaze points given that a trial was solved correctly and the distributions of features based on the labels. All of them suggest a similar picture. 
+In this thesis, we approached the research question from multiple analytical angles to better understand how visual attention relates to reasoning in reference games. First, we conducted a pairwise correlation analysis between eye-tracking features and two key trial-level outcomes: accuracy and response time. Next, we built a logistic regression model to predict whether a given trial would be solved correctly, based on the participant's gaze behavior. To further investigate the role of attention, we implemented two additional logistic regression models that focused on specific fixation patterns: one predicted whether a gaze point would land on the Distractor, and the other did the same for the bank of available messages. Finally, we analyzed participants' self-reported strategies and labeled them according to the Rational Speech Act (RSA) framework ($L_0$, $L_1$, $L_2$). This allowed us to compare how different reasoning strategies manifest in distinct attentional profiles.
 
-Although participants seem to grasp the problem in a similar way, their answers still differ quite a lot. We saw this from the the fact that the Distractor did not turn out to be associated with accuracy, even though it is a very important piece of information for the Complex trials. Thus, participants fail the trials not because they miss an important piece of information as we hypothesized in \autoref{sec:rsa}, where we showed that not looking at the Distractor would make the Complex condition unsolvable. 
+Although participants seem to grasp the problem in a similar way, their answers still differ quite a lot. We saw this from the fact that the Distractor did not turn out to be associated with accuracy, even though it is a very important piece of information for the Complex trials. Thus, participants fail the trials not because they miss an important piece of information as we hypothesized in \autoref{sec:rsa}, where we showed that not looking at the Distractor would make the Complex condition unsolvable. The problem appears to lie in how participants interpret or apply the information they attend to, rather than in what information they access.
 
-Now to match this to the multiple findings that the proportional time on available messages is positively associated with accuracy, we will make the following assumption. Participants looking more at the bank of available messages might indicate not just scanning the available messages, but also matching them with the objects, which can be seen as the reasoning process for reference games. Therefore, increase in proportional time on available messages might indicate that the participants are (recursively) reasoning about the objects and the messages. And a deeper reasoning process would lead to a higher chance of solving the trial correctly. Hence, a small increase in the proportional time on available messages would be enough to conclude a deeper reasoning process.
+The consistent association between accuracy and proportional time spent on the bank of available messages suggests that this behavior may reflect more than simple visual scanning. It is plausible that participants engage in matching messages to objects, or in other forms of referential reasoning. In the context of reference games, such (possibly recursive) reasoning processes are essential. Thus, increased attention to the available messages may serve as an indicator of deeper or more robust reasoning, ultimately leading to higher accuracy.
 
+While we could not directly infer participants' reasoning strategies, we were able to identify eye-tracking features associated with trial accuracy. Further research might include more sophisticated analysis to identify the actual strategies of the participants. The main finding suggests that the bank of available messages is an important area of interest when predicting whether a person is going to solve the trial correctly. A possible future work might include detecting which messages the participants are looking at and how they are using them. This reflects a design limitation: anticipating potential quality issues with WebGazer, we placed the available messages close together -- thus sacrificing the ability to detect which message the participants are looking at. However, this is a very interesting question and could be a good future work.
+
+Ongoing research on modeling participant behavior in reference games using ACT-R \citep{Duff_2025} may provide deeper insights into the cognitive strategies underlying their responses.
+
+This thesis contributes to a wider ongoing research on reference games. Overall, this work demonstrates that even with limited-resolution eye-tracking data, meaningful patterns can be extracted that shed light on participants' reasoning processes in reference games. This thesis provides a strong foundation for future work that would include eye-tracking data in reference games or another type of experiment with a similar setup. 
 
 
 \section{General Discussion}
@@ -17,7 +22,7 @@ Now to match this to the multiple findings that the proportional time on availab
 
 \subsection{Scanpaths}
 \label{sec:general-discussion:scanpaths}
-In this study, did not account for  the order of the gaze points. However, the scanpath by itself includes this information. We were unable to come up with a good strategy how one could encode the scanpath in a way that would be useful and feasible for the analysis. The scanpaths are not fixed length, posing a problem that every entry would be of a different length which would make it impossible to use them in a model. One idea could be to use RNNs to analyse the scanpaths, however, this would require a lot of data and a lot of tuning. We did a few attempts in training CNNs on the generated plots of the scanpaths, however, the results were not promising and due to low interpretability of the model and time constraints we decided to focus on the more traditional features.
+In this study, did not account for  the order of the gaze points. However, the scanpath by itself includes this information. We were unable to come up with a good strategy how one could encode the scanpath in a way that would be useful and feasible for the analysis. The scanpaths are not fixed length, posing a problem that every entry would be of a different length which would make it impossible to use them in a model. One idea could be to use RNNs to analyze the scanpaths, however, this would require a lot of data and a lot of tuning. We did a few attempts in training CNNs on the generated plots of the scanpaths, however, the results were not promising and due to low interpretability of the model and time constraints we decided to focus on the more traditional features.
 
 \subsection{Peripheral Vision}
 \label{sec:general-discussion:attention-and-eye-tracking}
