update: correct typos, adjust phrasing. Add: preregistration references

--- a/tex/references.bib
+++ b/tex/references.bib
@@ -1,3 +1,10 @@
+@misc{preregistration,
+  author       = {Tymur Mykhalievskyi and John Duff and Vera Demberg},
+  title        = {Preregistration for Thesis Project},
+  year         = {2025},
+  url          = {https://osf.io/hf4vs/?view_only=0d1880024b7349c4aec25b5bc318c85e}
+}
+
 @misc{github,
   author       = {Tymur Mykhalievskyi},
   title        = {Source Code for Thesis Project},
