--- a/tex/sections/c0/declaration.tex
+++ b/tex/sections/c0/declaration.tex
@@ -1,5 +1,5 @@
 ﻿\section*{Declarations}
-I hereby confirm that the thesis presented here is my own work, with all assistance acknowledged. I assure tha the electoric version is identical in content to the printed version of the thesis.
+I hereby confirm that the thesis presented here is my own work, with all assistance acknowledged. I assure that the electronic version is identical in content to the printed version of the thesis.
 
 % skip some space for the signature
 \vspace{2cm}
