--- a/tex/sections/concept.tex
+++ b/tex/sections/concept.tex
@@ -13,7 +13,7 @@ At first, we are interested in predicting the posterior, that is the probability
 
 \subsubsection{Research Hypothesis 1}
 \label{sec:h1}
-As we discussed in \autoref{sec:rsa}, the Distractor in the hypothesis is a crucial part of the problem. Therefore, it is important to understand how participants interact with the Distractor. The first research hypothesis is: Proportional time on Distractor is positively associated with accuracy on Complex trials.
+As we discussed in \autoref{sec:rsa}, the Distractor in the hypothesis is a crucial part of the problem. It is possible that one reason why a participant might struggle with Complex trials is because they do not consider the Distractor to be relevant. Therefore, it is important to understand how participants interact with the Distractor. The first research hypothesis is: Proportional time on Distractor is positively associated with accuracy on Complex trials.
 
 \subsubsection{Research Hypothesis 2}
 \label{sec:h2}
