--- a/tex/sections/relatedWork.tex
+++ b/tex/sections/relatedWork.tex
@@ -1,6 +1,6 @@
 ﻿\chapter{Related Work}
 \section{Reference Games}
-Although the idea of communication as a signaling game dates back to \cite{Lewis_1969}, we will focus here on a specific variant known as \textit{reference game}, as presented in \cite{Frank_2012}. The game is designed to mimic the challenges of everyday communication, as we discussed in the introduction. At first, an instance of a reference game looked as in \autoref{fig:intro_complex}, that is, no information about the available messages is given to the speaker and listener. Later instances, on the other hand, include this information, as illustrated in \autoref{fig:simple_complex}. The goal for newer version is the same, that is, to identify which object a speaker is referring to. This change allows for more controlled experiments by increasing the variability in setups. In addition, it should improve clarity, for instance, participants are less likely to question why the speaker would not simply state the object's location instead of describing its properties.
+Although the idea of communication as a signaling game dates back to \cite{Lewis_1969}, we will focus here on a specific variant known as a \textit{reference game}, as presented in \cite{Frank_2012}. The game is designed to mimic the challenges of everyday communication, as we discussed in the introduction. At first, an instance of the reference game looked as in \autoref{fig:intro_complex}, that is, no information about the available messages is given to the speaker and listener. Later instances, on the other hand, include this information, as illustrated in \autoref{fig:simple_complex}. The goal for newer version is the same, that is, to identify which object a speaker is referring to. This change allows for more controlled experiments by increasing the variability in setups. In addition, it should improve clarity, for instance, participants are less likely to question why the speaker would not simply state the object's location instead of describing its properties.
 
 \begin{figure}
 \centering
@@ -366,7 +366,7 @@ Eye tracking has long been used in cognitive science and psychology to study att
 
 The Raven Progressive Matrices, commonly referred to as the Raven Tests, are a set of nonverbal intelligence tests designed to measure abstract reasoning and problem-solving abilities through pattern recognition and logical inference. Such tests usually contains eight objects arranged in a 3x3 grid with one object missing, along with the set of possible answers displayed below the matrix. Each matrix either has a particular rule it is constructed by or a mix of them. An example is presented in \autoref{fig:raven}. 
 
-Researches suggest that there are two main strategies for solving the Raven Tests: constructive matching and response elimination \citep{Bethel-Fox_1984} and later followed by \cite{Vigneau_2006}. The former is described as successively identifying rules by which the matrix is constructed, until the answer is fully derived. And the later means that rather than going through the matrix, one goes over the possible answers and eliminates them one by one, ending up with the correct one in the end. The less efficient of these, response elimination, seemed to be used more frequently by lower-ability subjects on more difficult items. 
+Researches suggest that there are two main strategies for solving the Raven Tests: constructive matching and response elimination \citep{Bethel-Fox_1984} and later followed by \cite{Vigneau_2006}. The former is described as successively identifying rules by which the matrix is constructed, until the answer is fully derived. And the latter means that rather than going through the matrix, one goes over the possible answers and eliminates them one by one, ending up with the correct one in the end. The less efficient of these, response elimination, seemed to be used more frequently by lower-ability subjects on more difficult items. 
 
 The two strategies can be identified by the patterns of one's attention, hence, eye gaze. The constructive matching being focused on the matrix and systematically going through rows and columns of it. \cite{Carpenter_1990} expand on the eye-tracking experiments in this research question by recording eye gaze as well as the verbal comments during the process of solving the tasks. A very detailed sequence of actions is acquired, therefore, giving an insight into how one uses the constructive matching strategy to solve Raven Progressive Matrices. On the other hand, the response elimination involves frequent toggling between the possible answers and the matrix. In order to deepen the understanding in this problem \cite{Vigneau_2006} develop a set of features to encode ones attention. Such features include for example Time on Matrix, Time on Alternatives (possible answers) or Number of Toggles between the possible answers and the matrix. The authors report a correlation between the features and the proportion of correct answers. Indeed, the results show statistically significant negative correlation of Time on Alternatives and Number of Toggles with overall score. These findings further support theory about the difference in effectiveness in the two strategies. 
 
