--- a/tex/sections/introduction.tex
+++ b/tex/sections/introduction.tex
@@ -7,9 +7,9 @@ One way to study this is through reference games. In these games, participants e
 
 On the other hand, one could notice that the reference games are not as intuitive as the traveling example. It is still a limitation that we will have to keep for now. And this study could also shed light on this problem by understanding what exactly people are doing to solve this kind of problems.
 
-In order to deepen the understanding, a formal model was developed, it is called Rational Speech Act model. It tries to mimic a recursive sequence of reasoning between speaker and listener \citep{Franke_2016}. Despite significant progress in understanding the cognitive processes underlying these tasks, much remains unknown about the specific strategies individuals employ when solving particular problems within these games.
+In order to deepen the understanding, a formal model was developed, the Rational Speech Act model. It tries to mimic a recursive sequence of reasoning between speaker and listener \citep{Franke_2016}. This model offers a possible way to derive human-like pragmatic calculations, but much remains untested and unknown about the specific strategies individuals actually employ when they face one of these problems.
 
-This study seeks to expand on prior research by incorporating a novel dimension: tracking participants' eye gaze during reference games. Eye gaze offers valuable insight into how people process information, make decisions, and employ strategies. By capturing where and when participants direct their attention, we can gain a deeper understanding of the cognitive mechanisms at play, including how individuals prioritize certain visual cues and how these cues influence their reasoning strategies. This approach has proven to be a very insightful tool \citep{Vigneau_2006}.
+This study seeks to expand on prior research by incorporating a novel dimension: tracking participants' eye gaze during reference games. Eye gaze offers valuable insight into how people process information, make decisions, and employ strategies. By capturing where and when participants direct their attention, we can gain a deeper understanding of the cognitive mechanisms at play, including how individuals prioritize certain visual cues and how these cues influence their reasoning strategies. This approach has proven to be a very insightful tool for studying other tasks \citep{Vigneau_2006}.
 
 In particular, this study aims to answer the question: \textit{How do gaze patterns correlate with the accuracy and strategies used to solve specific communicative challenges in reference games?} By integrating eye-tracking data with the analysis of reasoning in these games, this paper contributes to a richer understanding of the decision-making processes involved in collaborative communication and problem-solving.
 
