add strategy labels to analysis, add a few models

--- a/analysis/plots.ipynb
+++ b/analysis/plots.ipynb
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -360,8 +360,7 @@
     "        cur_values.append([col, l0_mean, l1_mean, l2_mean])\n",
     "    \n",
     "    plot_df = pd.DataFrame(cur_values, columns=df_cols)\n",
-    "    plot_df.plot(x='Feature', kind='bar', title=f'{condition[0].upper() + condition[1:]} Condition', yerr=plot_df[['L0', 'L1', 'L2']].std(), yticks=np.arange(0, 1.1, 0.1), ylim=(0, 1))\n",
-    "\n"
+    "    plot_df.plot(x='Feature', kind='bar', title=f'{condition[0].upper() + condition[1:]} Condition', yerr=plot_df[['L0', 'L1', 'L2']].std(), yticks=np.arange(0, 1.1, 0.1), ylim=(0, 1))"
    ]
   }
  ],
