--- a/analysis/preprocessing_and_init_analysis.ipynb
+++ b/analysis/preprocessing_and_init_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
        "101"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,6 +270,21 @@
     "df['propTimeOnCompUnambiguous'] = df['timeOnCompUnambiguous'] / df['timeOnTrial']\n",
     "df['gazeSamplingRateHz'] = 1000 * df['timeOnTrial'] / df['answerTime']\n",
     "\n",
+    "# add strategy labels derived from annotations of strategies \n",
+    "# L0 = 0, L1 = 1, L2 = 2\n",
+    "participant_labels = None\n",
+    "add_labels = True\n",
+    "if add_labels:\n",
+    "    annotated_df = pd.read_csv(f'data/final_datasets/strategies_annotated.csv')\n",
+    "    annotated_df['label'] = 0\n",
+    "    annotated_df.loc[annotated_df['type'] == 'strategy_simple', 'label'] = annotated_df[annotated_df['type'] == 'strategy_simple'].apply(lambda x: 1 if x['Annotation'] == 'correct_reasoning' else 0, axis=1)\n",
+    "    annotated_df.loc[annotated_df['type'] == 'strategy_complex', 'label'] = annotated_df[annotated_df['type'] == 'strategy_complex'].apply(lambda x: 2 if x['Annotation'] == 'correct_reasoning' else x['label'], axis=1)\n",
+    "    participant_labels = annotated_df.groupby('workerid')['label'].max().reset_index()\n",
+    "\n",
+    "df = df.merge(participant_labels, on='workerid', how='left')\n",
+    "df['label'] = df['label'].ffill().astype(int)\n",
+    "df.rename(columns={'label': 'strategyLabel'}, inplace=True)\n",
+    "\n",
     "msg_type = {'ci': 'shape',\n",
     "            'sq': 'shape',\n",
     "            'tr': 'shape',\n",
@@ -303,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +329,7 @@
     "        df[column] = df[column].apply(lambda x: json.loads(x))\n",
     "    except:\n",
     "        print(column)\n",
-    "gaze_df = df[['workerid', 'userTrialId', 'correct', 'answerTime', 'gaze', 'trgtPos', 'distPos', 'compPos', 'coordinates', 'condition', 'msgType']]\n",
+    "gaze_df = df[['workerid', 'userTrialId', 'correct', 'answerTime', 'gaze', 'trgtPos', 'distPos', 'compPos', 'coordinates', 'strategyLabel', 'condition', 'msgType']]\n",
     "if filter_correct:\n",
     "    gaze_df = gaze_df[gaze_df['correct'] == 1]\n",
     "def detect_aoi(point, coords):\n",
@@ -334,6 +349,7 @@
     "    condition = row['condition']\n",
     "    msg_type = row['msgType']\n",
     "    trgt_pos = row['trgtPos']\n",
+    "    strategy_label = row['strategyLabel']\n",
     "    if not filter_correct:\n",
     "        correct = row['correct']\n",
     "    for key, val in row['gaze'].items():\n",
@@ -347,9 +363,9 @@
     "            aoi = img_to_obj[int(aoi[-1])-1]\n",
     "        aois.append(aoi)\n",
     "    if filter_correct:\n",
-    "        return pd.DataFrame({'Subject': subject, 'Trial': trial, 'Condition': condition, 'MsgType': msg_type, 'TrgtPos': trgt_pos, 'Time': time, 'AOI': aois})\n",
+    "        return pd.DataFrame({'Subject': subject, 'Trial': trial, 'Condition': condition, 'MsgType': msg_type, 'TrgtPos': trgt_pos, 'StrategyLabel': strategy_label, 'Time': time, 'AOI': aois})\n",
     "    else:\n",
-    "        return pd.DataFrame({'Subject': subject, 'Trial': trial, 'Condition': condition, 'MsgType': msg_type, 'TrgtPos': trgt_pos, 'Time': time, 'Correct': correct, 'AOI': aois})\n",
+    "        return pd.DataFrame({'Subject': subject, 'Trial': trial, 'Condition': condition, 'MsgType': msg_type, 'TrgtPos': trgt_pos, 'StrategyLabel': strategy_label, 'Time': time, 'Correct': correct, 'AOI': aois})\n",
     "pd.concat(np.array(gaze_df.apply(lambda x: explode_gaze(x), axis=1)).flatten(), axis=0).to_csv(f'data/final_datasets/{df_name}_{'correct_' if filter_correct else ''}fixations.csv', index=False)"
    ]
   },
@@ -362,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -700,6 +716,7 @@
     }
    ],
    "source": [
+    "\n",
     "df = pd.read_csv(f'data/preprocessed_data/{df_name}.csv')\n",
     "final_df_features = ['workerid',\n",
     "                     'userTrialId',\n",
@@ -713,6 +730,7 @@
     "                     'propTimeOnAvailableMsgs',\n",
     "                     'propTimeOnNonAOI',\n",
     "                     'rateTogglingAvailableMsgs',\n",
+    "                     'strategy',\n",
     "                     'trgtPos',\n",
     "                     'msgType'\n",
     "                    ]\n",
@@ -729,6 +747,7 @@
     "                                    'propTimeOnAvailableMsgs': 'PropTimeOnAvailableMsgs',\n",
     "                                    'propTimeOnNonAOI': 'PropTimeOnNonAOI',\n",
     "                                    'rateTogglingAvailableMsgs': 'RateTogglingAvailableMsgs',\n",
+    "                                    'strategy' : 'Strategy',\n",
     "                                    'trgtPos': 'TrgtPos',\n",
     "                                    'msgType': 'MsgType'})\n",
     "final_df.to_csv(f'data/final_datasets/{df_name}_trials.csv', index=False)\n",
@@ -744,20 +763,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# add labels derived from annotations of strategies\n",
-    "add_labels = True\n",
-    "if add_labels:\n",
-    "    annotated_df = pd.read_csv(f'data/final_datasets/strategies_annotated.csv')\n",
-    "    annotated_df['Label'] = 0\n",
-    "    annotated_df.loc[annotated_df['type'] == 'strategy_simple', 'Label'] = annotated_df[annotated_df['type'] == 'strategy_simple'].apply(lambda x: 1 if x['Annotation'] == 'correct_reasoning' else 0, axis=1)\n",
-    "    annotated_df.loc[annotated_df['type'] == 'strategy_complex', 'Label'] = annotated_df[annotated_df['type'] == 'strategy_complex'].apply(lambda x: 2 if x['Annotation'] == 'correct_reasoning' else x['Label'], axis=1)\n",
-    "    participant_labels = annotated_df.groupby('workerid')['Label'].max().reset_index()\n",
-    "    participant_labels = participant_labels.rename(columns={'workerid': 'Subject'})\n",
-    "\n",
     "df = pd.read_csv(f'data/preprocessed_data/{df_name}.csv')\n",
     "final_df_features = ['propTimeOnSentMsg',\n",
     "                        'propTimeOnSentMsgSimple',\n",
@@ -787,6 +796,7 @@
     "                        'rateTogglingAvailableMsgsSimple',\n",
     "                        'rateTogglingAvailableMsgsComplex',\n",
     "                        'rateTogglingAvailableMsgsUnambiguous',\n",
+    "                        'strategy',\n",
     "                        'meanAnswerTime',\n",
     "                        'meanAnswerTimeSimple',\n",
     "                        'meanAnswerTimeComplex',\n",
@@ -806,7 +816,6 @@
     "    print(unambiguous_performance)\n",
     "save_final = final_df.rename(columns={'workerid': 'Subject'})\n",
     "save_final = save_final.rename(lambda x: x[0].upper() + x[1:], axis=1, inplace=False)\n",
-    "save_final = pd.merge(save_final, participant_labels, on='Subject', how='left')\n",
     "save_final.to_csv(f'data/final_datasets/{df_name}_participants_extended.csv', index=False)\n",
     "\n",
     "conditional_dfs = []\n",
@@ -826,16 +835,14 @@
     "                             'PropTimeOnComp': row['propTimeOnComp' + condition_str],\n",
     "                             'PropTimeOnNonAOI': row['propTimeOnNonAOI' + condition_str],\n",
     "                             'RateTogglingAvailableMsgs': row['rateTogglingAvailableMsgs' + condition_str],\n",
+    "                             'Strategy': row['strategy'],\n",
     "                             'MeanAnswerTime': row['meanAnswerTime' + condition_str],\n",
     "                             'AnswerAccuracy': row['answerAccuracy' + condition_str]},\n",
     "                             index=[0])\n",
     "            \n",
     "df_array = np.array(final_df.apply(lambda x: pd.concat(list(explode_by_condition(x)), axis=0), axis=1))\n",
     "final_df_condition = pd.concat(df_array, axis=0)\n",
-    "# add labels from participants_labels to the final_df_condition \n",
-    "final_df_condition = pd.merge(final_df_condition, participant_labels, on='Subject', how='left')\n",
-    "\n",
-    "final_df_condition.to_csv(f'data/final_datasets/{df_name}_participants.csv', index=False)\n"
+    "final_df_condition.to_csv(f'data/final_datasets/{df_name}_participants.csv', index=False)"
    ]
   },
   {
