--- a/analysis/scanpath_classification/strategy_classification.ipynb
+++ b/analysis/scanpath_classification/strategy_classification.ipynb
@@ -2,38 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "23e11c52",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'ComplexWarning' from 'numpy.core.numeric' (c:\\Users\\timur\\uds\\venvs\\thesis\\Lib\\site-packages\\numpy\\core\\numeric.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m train_test_split\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m f1_score\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mMarkovModels\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m MarkovModelConstructor\n",
-      "File \u001b[1;32mc:\\Users\\timur\\uds\\venvs\\thesis\\Lib\\site-packages\\sklearn\\__init__.py:83\u001b[0m\n\u001b[0;32m     69\u001b[0m     \u001b[38;5;66;03m# We are not importing the rest of scikit-learn during the build\u001b[39;00m\n\u001b[0;32m     70\u001b[0m     \u001b[38;5;66;03m# process, as it may not be compiled yet\u001b[39;00m\n\u001b[0;32m     71\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     77\u001b[0m     \u001b[38;5;66;03m# later is linked to the OpenMP runtime to make it possible to introspect\u001b[39;00m\n\u001b[0;32m     78\u001b[0m     \u001b[38;5;66;03m# it and importing it first would fail if the OpenMP dll cannot be found.\u001b[39;00m\n\u001b[0;32m     79\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[0;32m     80\u001b[0m         __check_build,  \u001b[38;5;66;03m# noqa: F401\u001b[39;00m\n\u001b[0;32m     81\u001b[0m         _distributor_init,  \u001b[38;5;66;03m# noqa: F401\u001b[39;00m\n\u001b[0;32m     82\u001b[0m     )\n\u001b[1;32m---> 83\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mbase\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m clone\n\u001b[0;32m     84\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_show_versions\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m show_versions\n\u001b[0;32m     86\u001b[0m     __all__ \u001b[38;5;241m=\u001b[39m [\n\u001b[0;32m     87\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcalibration\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     88\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcluster\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    129\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshow_versions\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    130\u001b[0m     ]\n",
-      "File \u001b[1;32mc:\\Users\\timur\\uds\\venvs\\thesis\\Lib\\site-packages\\sklearn\\base.py:19\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_config\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m config_context, get_config\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mexceptions\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m InconsistentVersionWarning\n\u001b[1;32m---> 19\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m _IS_32BIT\n\u001b[0;32m     20\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_estimator_html_repr\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m estimator_html_repr\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_metadata_requests\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m _MetadataRequester\n",
-      "File \u001b[1;32mc:\\Users\\timur\\uds\\venvs\\thesis\\Lib\\site-packages\\sklearn\\utils\\__init__.py:22\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_bunch\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Bunch\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_estimator_html_repr\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m estimator_html_repr\n\u001b[1;32m---> 22\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_param_validation\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Interval, validate_params\n\u001b[0;32m     23\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mclass_weight\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m compute_class_weight, compute_sample_weight\n\u001b[0;32m     24\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdeprecation\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m deprecated\n",
-      "File \u001b[1;32mc:\\Users\\timur\\uds\\venvs\\thesis\\Lib\\site-packages\\sklearn\\utils\\_param_validation.py:15\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msparse\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m csr_matrix, issparse\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_config\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m config_context, get_config\n\u001b[1;32m---> 15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mvalidation\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m _is_arraylike_not_scalar\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mInvalidParameterError\u001b[39;00m(\u001b[38;5;167;01mValueError\u001b[39;00m, \u001b[38;5;167;01mTypeError\u001b[39;00m):\n\u001b[0;32m     19\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Custom exception to be raised when the parameter of a class/method/function\u001b[39;00m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;124;03m    does not have a valid type or value.\u001b[39;00m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\timur\\uds\\venvs\\thesis\\Lib\\site-packages\\sklearn\\utils\\validation.py:24\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msparse\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01msp\u001b[39;00m\n\u001b[0;32m     23\u001b[0m \u001b[38;5;66;03m# mypy error: Module 'numpy.core.numeric' has no attribute 'ComplexWarning'\u001b[39;00m\n\u001b[1;32m---> 24\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcore\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mnumeric\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ComplexWarning  \u001b[38;5;66;03m# type: ignore\u001b[39;00m\n\u001b[0;32m     26\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m get_config \u001b[38;5;28;01mas\u001b[39;00m _get_config\n\u001b[0;32m     27\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mexceptions\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m DataConversionWarning, NotFittedError, PositiveSpectrumWarning\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'ComplexWarning' from 'numpy.core.numeric' (c:\\Users\\timur\\uds\\venvs\\thesis\\Lib\\site-packages\\numpy\\core\\numeric.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import f1_score\n",
-    "from MarkovModels import MarkovModelConstructor"
+    "from MarkovModels.MarkovModelConstructor import MarkovModelConstructor\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.neural_network import MLPClassifier\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "b4ce4a0f",
    "metadata": {},
    "outputs": [],
@@ -42,12 +27,11 @@
     "def fit_classifier(df: pd.DataFrame, model, target):\n",
     "    features = [col for col in df.columns if col != target]\n",
     "    X = df[features].to_numpy()\n",
-    "    y = df['StrategyLabel'].to_numpy()\n",
+    "    y = df[target].to_numpy()\n",
     "    \n",
     "    # Split the data into training and testing sets\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "    # Fit the model\n",
     "    model.fit(X_train, y_train)\n",
     "    \n",
     "    # Evaluate the model\n",
@@ -62,19 +46,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "id": "970631e2",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'MarkovModelConstructor' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m keep_non_aoi:\n\u001b[0;32m      6\u001b[0m     states\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnon_aoi\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 7\u001b[0m MarkovModelConstr \u001b[38;5;241m=\u001b[39m \u001b[43mMarkovModelConstructor\u001b[49m\u001b[38;5;241m.\u001b[39mMarkovModelConstructor(states)\n\u001b[0;32m      8\u001b[0m df \u001b[38;5;241m=\u001b[39m MarkovModelConstr\u001b[38;5;241m.\u001b[39mcreate_markov_models(df, states, include_non_aoi\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, save\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, explode\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, per\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mparticipant\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# print(df.iloc[0]['TransitionMatrix'])\u001b[39;00m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'MarkovModelConstructor' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\timur\\uds\\Thesis-Project\\analysis\\scanpath_classification\\MarkovModels\\MarkovModel.py:29: RuntimeWarning: invalid value encountered in divide\n",
+      "  self.transition_matrix = self.joint_probabilities / self.prior_probabilities[:, np.newaxis]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: RandomForestClassifier, Accuracy: 0.63\n",
+      "Confusion Matrix:\n",
+      "Predicted  0  1  2\n",
+      "Actual            \n",
+      "0          2  1  3\n",
+      "1          1  2  1\n",
+      "2          0  2  9\n",
+      "Model: KNeighborsClassifier, Accuracy: 0.69\n",
+      "Confusion Matrix:\n",
+      "Predicted   2\n",
+      "Actual       \n",
+      "0           6\n",
+      "1           4\n",
+      "2          11\n",
+      "Model: MLPClassifier, Accuracy: 0.65\n",
+      "Confusion Matrix:\n",
+      "Predicted  0  1   2\n",
+      "Actual             \n",
+      "0          2  2   2\n",
+      "1          1  1   2\n",
+      "2          1  0  10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\timur\\uds\\venvs\\thesis\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (500) reached and the optimization hasn't converged yet.\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -85,7 +101,7 @@
     "keep_non_aoi = False\n",
     "if keep_non_aoi:\n",
     "    states.append('non_aoi')\n",
-    "MarkovModelConstr = MarkovModelConstructor.MarkovModelConstructor(states)\n",
+    "MarkovModelConstr = MarkovModelConstructor(states)\n",
     "df = MarkovModelConstr.create_markov_models(df, states, include_non_aoi=False, save=False, explode=True, per='participant')\n",
     "# print(df.iloc[0]['TransitionMatrix'])\n",
     "assert df is not None, \"DataFrame should not be None after Markov Model construction\"\n",
@@ -97,13 +113,119 @@
     "target = 'StrategyLabel'\n",
     "df.drop(columns=['Scanpath', 'TransitionMatrix', 'Subject', 'Correct'], inplace=True)\n",
     "\n",
-    "model_forest = RandomForestClassifier(n_estimators=1, random_state=42, criterion='gini')\n",
+    "model_forest = RandomForestClassifier(n_estimators=1, random_state=42, criterion='gini', class_weight='balanced')\n",
     "fitted_model_forest = fit_classifier(df, model_forest, target)\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
     "model_knn = KNeighborsClassifier(n_neighbors=20)\n",
     "fitted_model_knn = fit_classifier(df, model_knn, target)\n",
-    "from sklearn.neural_network import MLPClassifier\n",
     "model_nn = MLPClassifier(hidden_layer_sizes=(100, 50), max_iter=500, random_state=42)\n",
+    "fitted_model_nn = fit_classifier(df, model_nn, target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "8a3af2f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Features:  ['PropTimeOnSentMsg', 'PropTimeOnAvailableMsgs', 'PropTimeOnTrgt', 'PropTimeOnDist', 'PropTimeOnComp', 'PropTimeOnNonAOI', 'RateTogglingAvailableMsgs', 'MeanAnswerTime', 'AnswerAccuracy', 'Condition_simple', 'Condition_unambiguous']\n",
+      "Class weights:  {2.0: 0.5544554455445545, 0.0: 0.24752475247524752, 1.0: 0.19801980198019803}\n",
+      "Model: RandomForestClassifier, Accuracy: 0.45\n",
+      "Confusion Matrix:\n",
+      "Predicted  0.0  1.0  2.0\n",
+      "Actual                  \n",
+      "0.0          4    4    8\n",
+      "1.0          2    4    8\n",
+      "2.0          7    5   19\n",
+      "Model: KNeighborsClassifier, Accuracy: 0.58\n",
+      "Confusion Matrix:\n",
+      "Predicted  0.0  1.0  2.0\n",
+      "Actual                  \n",
+      "0.0          0    3   13\n",
+      "1.0          1    0   13\n",
+      "2.0          1    2   28\n",
+      "Model: MLPClassifier, Accuracy: 0.37\n",
+      "Confusion Matrix:\n",
+      "Predicted  1.0\n",
+      "Actual        \n",
+      "0.0         16\n",
+      "1.0         14\n",
+      "2.0         31\n"
+     ]
+    }
+   ],
+   "source": [
+    "path = \"C:\\\\Users\\\\timur\\\\uds\\\\Thesis-Project\\\\analysis\\\\data\\\\final_datasets\\\\final_experiment_participants.csv\"\n",
+    "df = pd.read_csv(path)\n",
+    "df = df[df['Condition'] != 'all']\n",
+    "target = 'StrategyLabel'\n",
+    "df = pd.get_dummies(df, columns=['Condition'], drop_first=True)\n",
+    "df = df.drop(columns=['Subject'])\n",
+    "print('Features: ', df.columns.drop(target).tolist())\n",
+    "\n",
+    "class_weight = df[target].value_counts(normalize=True).to_dict()\n",
+    "print('Class weights: ', class_weight   )\n",
+    "\n",
+    "model_forest = RandomForestClassifier(n_estimators=1, random_state=42, criterion='gini', class_weight='balanced')\n",
+    "fitted_model_forest = fit_classifier(df, model_forest, target)\n",
+    "model_knn = KNeighborsClassifier(n_neighbors=20)\n",
+    "fitted_model_knn = fit_classifier(df, model_knn, target)\n",
+    "model_nn = MLPClassifier(hidden_layer_sizes=(100, 50), max_iter=500, random_state=42, solver='adam')\n",
+    "fitted_model_nn = fit_classifier(df, model_nn, target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "38cd9481",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Features:  ['PropTimeOnSentMsg', 'PropTimeOnAvailableMsgs', 'PropTimeOnTrgt', 'PropTimeOnDist', 'PropTimeOnComp', 'PropTimeOnNonAOI', 'RateTogglingAvailableMsgs', 'MeanAnswerTime', 'AnswerAccuracy', 'StrategyLabel_1.0', 'StrategyLabel_2.0']\n",
+      "Model: RandomForestClassifier, Accuracy: 0.60\n",
+      "Confusion Matrix:\n",
+      "Predicted    complex  simple  unambiguous\n",
+      "Actual                                   \n",
+      "complex           10       4            3\n",
+      "simple             9      13            2\n",
+      "unambiguous        3       3           14\n",
+      "Model: KNeighborsClassifier, Accuracy: 0.62\n",
+      "Confusion Matrix:\n",
+      "Predicted    complex  simple  unambiguous\n",
+      "Actual                                   \n",
+      "complex           12       3            2\n",
+      "simple             9       9            6\n",
+      "unambiguous        2       2           16\n",
+      "Model: MLPClassifier, Accuracy: 0.56\n",
+      "Confusion Matrix:\n",
+      "Predicted    complex  simple\n",
+      "Actual                      \n",
+      "complex            0      17\n",
+      "simple             0      24\n",
+      "unambiguous        1      19\n"
+     ]
+    }
+   ],
+   "source": [
+    "path = \"C:\\\\Users\\\\timur\\\\uds\\\\Thesis-Project\\\\analysis\\\\data\\\\final_datasets\\\\final_experiment_participants.csv\"\n",
+    "df = pd.read_csv(path)\n",
+    "df = df[df['Condition'] != 'all']\n",
+    "target = 'Condition'\n",
+    "df = df.drop(columns=['Subject'])\n",
+    "df = pd.get_dummies(df, columns=['StrategyLabel'], drop_first=True)\n",
+    "print('Features: ', df.columns.drop(target).tolist())\n",
+    "\n",
+    "model_forest = RandomForestClassifier(n_estimators=1, random_state=42, criterion='gini')\n",
+    "fitted_model_forest = fit_classifier(df, model_forest, target)\n",
+    "model_knn = KNeighborsClassifier(n_neighbors=15)\n",
+    "fitted_model_knn = fit_classifier(df, model_knn, target)\n",
+    "model_nn = MLPClassifier(hidden_layer_sizes=(10, 5), max_iter=500, random_state=42, solver='adam')\n",
     "fitted_model_nn = fit_classifier(df, model_nn, target)"
    ]
   }
